--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -43,3 +43,25 @@ hr {
     margin-top: 1rem;
     border-image: linear-gradient(to left, #7773C6, #9d6cc0, #bd64b2) 1;
 }
+
+.post-enter {
+    opacity: 0;
+    transform: translateY(-350px);
+  }
+.post-enter-active {
+    opacity: 1;
+    transition: 4s ease-out;
+    transition-duration: 1s;
+    transform: translateY(150px);
+  }
+
+.post-exit {
+    opacity: 1;
+  }
+
+  .post-exit-active {
+    opacity: 0;
+    transition: 5s ease-out;
+    transition-duration: 1s;
+    transform: translateY(300px);
+  }
