--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -14,7 +14,25 @@
 }
 
 .App {
-    width: 800px;
+    width: 60vw;
+}
+
+@media (max-width: 1024px){
+    .App{
+        width: 75vw;
+    }
+}
+
+@media (max-width: 768px){
+    .App{
+        width: 90vw;
+    }
+}
+
+@media (max-width: 480px){
+    .App{
+        width: 95vw;
+    }
 }
 
 .posts {
@@ -61,7 +79,7 @@ hr {
 
   .post-exit-active {
     opacity: 0;
-    transition: 5s ease-out;
-    transition-duration: 1s;
-    transform: translateY(300px);
+    transition: 1s ease-out;
+    transition-duration: 3s;
+    transform: translateY(2000px);
   }
